<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.maxim.jokesapp.presentation.CorrectTextView
        android:id="@+id/commonDataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="Test joke"
        android:layout_marginBottom="3dp"/>

    <com.maxim.jokesapp.presentation.CorrectImageButton
        android:id="@+id/removeFromFavoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_favorite_24" />

</LinearLayout>